added footer and cleaned up UI more

--- a/_includes/awards.html
+++ b/_includes/awards.html
@@ -20,7 +20,7 @@
       <li>Software Design Track - Honorable Mention</li>
     </ul>
   </li>
-  <li>University of Louisville Trustee's Scholarship</li>
-  <li>Vogt Achievement Scholarship</li>
-  <li>Volunteer at Code PaLOUsa Developer Conference 2011</li>
+  <li><a href="http://louisville.edu/stu-aff/services/admissions/aid/trustees.html" target="_blank">University of Louisville Trustees Scholarship</a></li>
+  <li><a href="http://www.cflouisville.org/whatsnew/apply-vogt-achievement-scholarship" target="_blank">Vogt Achievement Scholarship</a></li>
+  <li>Volunteer at <a href="http://www.codepalousa.com/" target="_blank">Code PaLOUsa</a> Developer Conference 2011</li>
 </ul>
