--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -8,7 +8,7 @@
     </div>
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong>Cyan, Inc.</strong> <span class="label label-success">Dec 2013 - Present</span>
+        <strong><a href="http://www.cyaninc.com/" target="_blank">Cyan, Inc.</a></strong> <span class="label label-success">Dec 2013 - Present</span>
       </div>
       <div class="popover-content">
         <strong>Software Engineer</strong>
@@ -36,12 +36,12 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>Randstad Technologies US</strong> <span class="label label-default">Aug 2013 - Nov 2013</span>
+        <strong><a href="http://www.randstadusa.com/" target="_blank">Randstad Technologies US</a></strong> <span class="label label-default">Aug 2013 - Nov 2013</span>
       </div>
       <div class="popover-content">
         <strong>Contractor/Consultant</strong>
         <ul>
-          <li>SharePoint 2013 development for Coca-Cola Enterprises Inc.</li>
+          <li>SharePoint 2013 development for <a href="http://www.cokecce.com/" target="_blank">Coca-Cola Enterprises</a>.</li>
         </ul>
       </div>
     </div>
@@ -53,7 +53,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>ControlTouch Systems, Inc.</strong> <span class="label label-default">May 2013 - Aug 2013</span>
+        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label label-default">May 2013 - Aug 2013</span>
       </div>
       <div class="popover-content">
         <strong>Controls Engineer</strong>
@@ -72,7 +72,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>ControlTouch Systems, Inc.</strong> <span class="label label-default">May 2011 - May 2013</span>
+        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label label-default">May 2011 - May 2013</span>
       </div>
       <div class="popover-content">
         <strong>Software Engineer Internship</strong>
@@ -111,7 +111,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>Appriss</strong> <span class="label label-default">Jan 2010 - May 2011</span>
+        <strong><a href="http://www.appriss.com/" target="_blank">Appriss</a></strong> <span class="label label-default">Jan 2010 - May 2011</span>
       </div>
       <div class="popover-content">
         <strong>Core Tools Team Internship</strong>
@@ -131,12 +131,12 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>University of Louisville</strong> <span class="label label-default">Aug 2008 - May 2013</span>
+        <strong><a href="http://louisville.edu/" target="_blank">University of Louisville</a></strong> <span class="label label-default">Aug 2008 - May 2013</span>
       </div>
       <div class="popover-content">
         <strong>BS, Computer Engineering and Computer Science</strong>
         <ul>
-          <li>IEEE member</li>
+          <li><a href="http://www.ieee.org/" target="_blank">IEEE</a> member</li>
           <li>Intramural ultimate frisbee</li>
         </ul>
       </div>
@@ -149,7 +149,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>Walmart</strong> <span class="label label-default">Jun 2007 - Sep 2009</span>
+        <strong><a href="http://www.walmart.com/" target="_blank">Walmart</a></strong> <span class="label label-default">Jun 2007 - Sep 2009</span>
       </div>
       <div class="popover-content">
         <strong>Cashier/Customer Service/Photo Technician</strong>
@@ -169,13 +169,13 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>Jeffersontown High School</strong> <span class="label label-default">Aug 2004 - May 2008</span>
+        <strong><a href="http://www.jefferson.k12.ky.us/schools/high/Jeffersontown/Index.html" target="_blank">Jeffersontown High School</a></strong> <span class="label label-default">Aug 2004 - May 2008</span>
       </div>
       <div class="popover-content">
         <strong>High School Diploma</strong>
         <ul>
           <li>AP program</li>
-          <li>Project Lead The Way (Pre-Engineering program)</li>
+          <li><a href="https://www.pltw.org/" target="_blank">Project Lead The Way</a> (Pre-Engineering program)</li>
           <li>Marine JROTC</li>
           <li>Tennis Team</li>
         </ul>
@@ -189,7 +189,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>ControlTouch Systems, Inc.</strong> <span class="label label-default">Aug 2003 - Oct 2010</span>
+        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label label-default">Aug 2003 - Oct 2010</span>
       </div>
       <div class="popover-content">
         <strong>Temporary/Seasonal</strong>
