--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,8 +38,21 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container" id="wrap">
       {{ content }}
+    </div>
+
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+      <div class="container">
+        <p class="text-muted pull-left">Copyright &copy; 2014 Matthew Dahl.</p>
+        <div class="pull-right">
+          <ul>
+            <li><a href="https://www.facebook.com/dahlmatthew" target="_blank"><svg width="32" height="32"><image xlink:href="images/facebook.svg" alt="Facebook" src="images/facebook.png" width="32" height="32" /></svg></a></li>
+            <li><a href="http://www.linkedin.com/in/dahlmatthew/" target="_blank"><svg width="32" height="32"><image xlink:href="images/linkedin.svg" alt="LinkedIn" src="images/linkedin.png" width="32" height="32" /></svg></a></li>
+            <li><a href="https://twitter.com/DahlMatthew" target="_blank"><svg width="32" height="32"><image xlink:href="images/twitter.svg" alt="Twitter" src="images/twitter.png" width="32" height="32" /></svg></a></li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <script>
