added hover effect to social media buttons

--- a/css/main.css
+++ b/css/main.css
@@ -35,23 +35,38 @@ body {
 }
 
 .navbar-fixed-bottom ul {
-  line-height: 45px;
   list-style: none;
+  margin-bottom: 0;
 }
 
 .navbar-fixed-bottom li {
   display:inline-block;
-  margin-left: 10px;
 }
 
-.navbar-fixed-bottom ul img,
-.navbar-fixed-bottom ul svg {
-  vertical-align: bottom;
+.navbar-fixed-bottom li a {
+  display: inline-block;
+  height: 40px;
+  margin-top: 14px;
+  width: 40px;
+}
+
+.navbar-fixed-bottom li img,
+.navbar-fixed-bottom li svg {
+  border-radius: 16px;
+}
+
+.navbar-fixed-bottom li img:hover,
+.navbar-fixed-bottom li svg:hover {
+  box-shadow: 0 0 4px #fff;
 }
 
 @media(max-width: 767px) {
   .container .text-muted {
     font-size: 11px;
+  }
+
+  .navbar-fixed-bottom li a {
+    margin-top: 11px;
   }
 }
 
