improve timeline colors

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -2,13 +2,13 @@
 
 <ol class="timeline">
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://www.cyaninc.com/" target="_blank">Cyan, Inc.</a></strong> <span class="label label-success">Dec 2013 - Present</span>
+        <strong><a href="http://www.cyaninc.com/" target="_blank">Cyan, Inc.</a></strong> <span class="label">Dec 2013 - Present</span>
       </div>
       <div class="popover-content">
         <strong>Software Engineer</strong>
@@ -16,13 +16,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="location">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-home"></span>
     </div>
-    <div class="panel panel-primary">
+    <div class="panel panel-warning">
       <div class="panel-heading">
-        <strong>Relocate</strong> <span class="label label-success">Nov 2013 - Present</span>
+        <strong>Relocate</strong> <span class="label">Nov 2013 - Present</span>
       </div>
       <div class="popover-content">
         <strong>Petaluma, California</strong>
@@ -30,13 +30,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://www.randstadusa.com/" target="_blank">Randstad Technologies US</a></strong> <span class="label label-default">Aug 2013 - Nov 2013</span>
+        <strong><a href="http://www.randstadusa.com/" target="_blank">Randstad Technologies US</a></strong> <span class="label">Aug 2013 - Nov 2013</span>
       </div>
       <div class="popover-content">
         <strong>Contractor/Consultant</strong>
@@ -47,13 +47,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label label-default">May 2013 - Aug 2013</span>
+        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label">May 2013 - Aug 2013</span>
       </div>
       <div class="popover-content">
         <strong>Controls Engineer</strong>
@@ -66,13 +66,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label label-default">May 2011 - May 2013</span>
+        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label">May 2011 - May 2013</span>
       </div>
       <div class="popover-content">
         <strong>Software Engineer Internship</strong>
@@ -87,7 +87,7 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
@@ -105,13 +105,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://www.appriss.com/" target="_blank">Appriss</a></strong> <span class="label label-default">Jan 2010 - May 2011</span>
+        <strong><a href="http://www.appriss.com/" target="_blank">Appriss</a></strong> <span class="label">Jan 2010 - May 2011</span>
       </div>
       <div class="popover-content">
         <strong>Core Tools Team Internship</strong>
@@ -125,13 +125,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="education">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-book"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <strong><a href="http://louisville.edu/" target="_blank">University of Louisville</a></strong> <span class="label label-default">Aug 2008 - May 2013</span>
+        <strong><a href="http://louisville.edu/" target="_blank">University of Louisville</a></strong> <span class="label">Aug 2008 - May 2013</span>
       </div>
       <div class="popover-content">
         <strong>BS, Computer Engineering and Computer Science</strong>
@@ -143,13 +143,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://www.walmart.com/" target="_blank">Walmart</a></strong> <span class="label label-default">Jun 2007 - Sep 2009</span>
+        <strong><a href="http://www.walmart.com/" target="_blank">Walmart</a></strong> <span class="label">Jun 2007 - Sep 2009</span>
       </div>
       <div class="popover-content">
         <strong>Cashier/Customer Service/Photo Technician</strong>
@@ -163,13 +163,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="education">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-book"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <strong><a href="http://www.jefferson.k12.ky.us/schools/high/Jeffersontown/Index.html" target="_blank">Jeffersontown High School</a></strong> <span class="label label-default">Aug 2004 - May 2008</span>
+        <strong><a href="http://www.jefferson.k12.ky.us/schools/high/Jeffersontown/Index.html" target="_blank">Jeffersontown High School</a></strong> <span class="label">Aug 2004 - May 2008</span>
       </div>
       <div class="popover-content">
         <strong>High School Diploma</strong>
@@ -183,13 +183,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="experience">
     <div class="timeline-badge">
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
-        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label label-default">Aug 2003 - Oct 2010</span>
+        <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label">Aug 2003 - Oct 2010</span>
       </div>
       <div class="popover-content">
         <strong>Temporary/Seasonal</strong>
@@ -202,13 +202,13 @@
     </div>
   </li>
 
-  <li>
+  <li class="location">
     <div class="timeline-badge">
-      <span class="glyphicon glyphicon-gift"></span>
+      <span class="glyphicon glyphicon-home"></span>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-warning">
       <div class="panel-heading">
-        <strong>Born</strong> <span class="label label-default">Jan 1990</span>
+        <strong>Born</strong> <span class="label">Jan 1990</span>
       </div>
       <div class="popover-content">
         <strong>Louisville, Kentucky</strong>
