impruve UI colors and add arrows to panels

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -7,6 +7,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://www.cyaninc.com/" target="_blank">Cyan, Inc.</a></strong> <span class="label">Dec 2013 - Present</span>
       </div>
@@ -21,6 +22,7 @@
       <span class="glyphicon glyphicon-home"></span>
     </div>
     <div class="panel panel-warning">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong>Relocate</strong> <span class="label">Nov 2013 - Present</span>
       </div>
@@ -35,6 +37,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://www.randstadusa.com/" target="_blank">Randstad Technologies US</a></strong> <span class="label">Aug 2013 - Nov 2013</span>
       </div>
@@ -52,6 +55,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label">May 2013 - Aug 2013</span>
       </div>
@@ -71,6 +75,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label">May 2011 - May 2013</span>
       </div>
@@ -92,6 +97,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong>Mintrus, LLC</strong> <span class="label label-success">Jan 2010 - Present</span>
       </div>
@@ -110,6 +116,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://www.appriss.com/" target="_blank">Appriss</a></strong> <span class="label">Jan 2010 - May 2011</span>
       </div>
@@ -130,6 +137,7 @@
       <span class="glyphicon glyphicon-book"></span>
     </div>
     <div class="panel panel-info">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://louisville.edu/" target="_blank">University of Louisville</a></strong> <span class="label">Aug 2008 - May 2013</span>
       </div>
@@ -148,6 +156,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://www.walmart.com/" target="_blank">Walmart</a></strong> <span class="label">Jun 2007 - Sep 2009</span>
       </div>
@@ -168,6 +177,7 @@
       <span class="glyphicon glyphicon-book"></span>
     </div>
     <div class="panel panel-info">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://www.jefferson.k12.ky.us/schools/high/Jeffersontown/Index.html" target="_blank">Jeffersontown High School</a></strong> <span class="label">Aug 2004 - May 2008</span>
       </div>
@@ -188,6 +198,7 @@
       <span class="glyphicon glyphicon-briefcase"></span>
     </div>
     <div class="panel panel-primary">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong><a href="http://controltouch.com/" target="_blank">ControlTouch Systems, Inc.</a></strong> <span class="label">Aug 2003 - Oct 2010</span>
       </div>
@@ -207,6 +218,7 @@
       <span class="glyphicon glyphicon-home"></span>
     </div>
     <div class="panel panel-warning">
+      <div class="arrow"></div>
       <div class="panel-heading">
         <strong>Born</strong> <span class="label">Jan 1990</span>
       </div>
